# linknode

./: docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: draggableNode.js  index.js  submit.js  toolbar.js  ui.js
frontend/src/components/: AddNode.js  BaseNode.js  SuccessDialog.js  ToggleButton.js
frontend/src/nodes/: AnalyticNode.js  DataProcessingNode.js  NotificationNode.js  StorageNode.js  TransformNode.js  index.js  inputNode.js  llmNode.js  nodeConfig.js  outputNode.js  textNode.js
