[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kalio007 <kalioprince1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
networkx = "^3.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
